--- a/lesson1_app/src/App.css
+++ b/lesson1_app/src/App.css
@@ -165,6 +165,7 @@ a {
 
 .app .app__wraper .app__chats .chat .chat_element .chat_block p {
   text-align: start;
+  word-wrap: break-word;
 }
 
 .app .app__wraper .app__chats .chat .chat_element .chat_block .messageAuthor {
@@ -210,9 +211,9 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 90%;
   margin-top: 5px;
 }
@@ -346,9 +347,32 @@ a {
   border-radius: 5px;
 }
 
+.container .home__page {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container .home__page .home__mesage {
+  max-width: 700px;
+  margin-top: 10px;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 7px;
+  background: rgba(255, 255, 255, 0.4);
+  border-radius: 3px;
+}
+
 .main__header {
   width: 100%;
-  z-index: 10;
+  z-index: 20;
   background: #94af61;
 }
 
@@ -368,6 +392,7 @@ a {
 .main__header .header__container .menu__body {
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
+  z-index: 9;
 }
 
 .main__header .header__container .menu__body .menu__list {
@@ -443,6 +468,11 @@ a {
   padding: 5px 10px;
   border-radius: 5px;
   border: 1px solid;
+}
+
+.form__wraper .login_form h3 {
+  max-width: 80%;
+  text-align: center;
 }
 
 .main__footer {
@@ -522,6 +552,9 @@ a {
   .app .app__wraper .app__chats {
     width: 70%;
   }
+  .container .container__wraper .profile__page {
+    width: 85%;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 900px) {
@@ -530,6 +563,9 @@ a {
   }
   .app .app__wraper .app__chats {
     width: 65%;
+  }
+  .container .container__wraper .profile__page {
+    width: 100%;
   }
 }
 
@@ -543,9 +579,9 @@ a {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
     position: fixed;
     top: 0;
     left: -100%;
@@ -577,7 +613,7 @@ a {
     left: 0;
   }
   .main__header .header__container .menu__icon {
-    z-index: 5;
+    z-index: 10;
     display: block;
     position: relative;
     width: 35px;
@@ -642,6 +678,44 @@ a {
   }
   .main__footer .footer__container .content__nav a {
     margin: 0 20px;
+  }
+  .app h2 {
+    margin-top: 10px;
+  }
+  .app .app__wraper {
+    margin-top: 10px;
+    height: 75vh;
+  }
+  .app .app__wraper .app__chatList {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+  }
+  .app .app__wraper .app__chatList._active {
+    display: none;
+  }
+  .app .app__wraper .app__chats {
+    width: 100%;
+  }
+  .app .app__wraper .app__chats._active {
+    display: none;
+  }
+  .container .container__wraper .profile__page {
+    width: 100%;
+  }
+  .container .container__wraper .profile__page .profile__info {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .container .container__wraper .profile__page .profile__info .profile__form {
+    margin-top: 10px;
+    width: 100%;
   }
 }
 /*# sourceMappingURL=App.css.map */
