--- a/lesson1_app/src/App.css
+++ b/lesson1_app/src/App.css
@@ -444,7 +444,7 @@ a {
   margin-top: 30px;
   width: 45%;
   min-width: 300px;
-  height: 300px;
+  min-height: 300px;
   border: 1px solid black;
   border-radius: 20px;
   padding: 20px;
@@ -567,6 +567,21 @@ a {
   .container .container__wraper .profile__page {
     width: 100%;
   }
+  .form__wraper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .form__wraper .login_form {
+    width: 100%;
+  }
 }
 
 @media (max-width: 767px) {
@@ -661,9 +676,6 @@ a {
     -webkit-transform: rotate(45deg) translate(0px, 50%);
             transform: rotate(45deg) translate(0px, 50%);
   }
-  .form__wraper .login_form h3 {
-    text-align: center;
-  }
   .main__footer .footer__container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -716,6 +728,24 @@ a {
   .container .container__wraper .profile__page .profile__info .profile__form {
     margin-top: 10px;
     width: 100%;
+  }
+  .form__wraper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .form__wraper .login_form {
+    width: 100%;
+  }
+  .form__wraper .login_form h3 {
+    text-align: center;
   }
 }
 /*# sourceMappingURL=App.css.map */
