--- a/lesson1_app/src/App.scss
+++ b/lesson1_app/src/App.scss
@@ -284,7 +284,7 @@ a{
         margin-top: 30px;
         width: 45%;
         min-width: 300px;
-        height: 300px;
+        min-height: 300px;
         border: 1px solid black;
         border-radius: 20px;
         padding: 20px;
@@ -399,6 +399,14 @@ a{
             }
         }
     }
+    .form__wraper{
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        .login_form{
+            width: 100%;
+        }
+    }
 }
 @media (max-width: 767px){
     .main__header{
@@ -476,13 +484,6 @@ a{
             }
         }
     }
-    .form__wraper{
-        .login_form{
-            h3{
-                text-align: center;
-            }
-        }
-    }
     .main__footer{
         .footer__container{
             flex-direction: column;
@@ -533,6 +534,17 @@ a{
                         width: 100%;
                     }
                 }
+            }
+        }
+    }
+    .form__wraper{
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        .login_form{
+            width: 100%;
+            h3{
+                text-align: center;
             }
         }
     }
