--- a/lesson1_app/src/App.css
+++ b/lesson1_app/src/App.css
@@ -14,7 +14,7 @@ a {
 .app {
   background: -webkit-gradient(linear, left bottom, left top, from(#62d6d7), to(#f6d48d));
   background: linear-gradient(0deg, #62d6d7 0%, #f6d48d 100%);
-  min-height: 90vh;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -51,6 +51,9 @@ a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border-radius: 1rem;
   width: 20%;
   padding: 5px 10px;
@@ -63,7 +66,7 @@ a {
   background: transparent;
   margin-bottom: 10px;
   height: 95%;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .app .app__wraper .app__chatList ul .MuiListItem-button {
@@ -142,7 +145,7 @@ a {
           align-items: center;
   width: 100%;
   height: 100%;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .app .app__wraper .app__chats .chat .chat_element {
@@ -747,5 +750,9 @@ a {
   .form__wraper .login_form h3 {
     text-align: center;
   }
+}
+
+::-webkit-scrollbar {
+  width: 5px;
 }
 /*# sourceMappingURL=App.css.map */
